# coding_corner

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp_test.yml
libs/example_library/: CMakeLists.txt
libs/example_library/include/example_library/: example_library_header.h
libs/example_library/src/: example_library_source.cpp
libs/sdl_interface/: CMakeLists.txt
libs/sdl_interface/include/sdl_interface/: rectangle.h  renderer.h  widget.h  widget_manager.h  window.h
libs/sdl_interface/src/: rectangle.cpp  renderer.cpp  window.cpp
libs/sdl_interface/tests/: CMakeLists.txt  rectangle_tests.cc  renderer_tests.cc
